# Rz

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: clap_utils.rs  handler.rs  main.rs  ops.rs  utils.rs
core/: Cargo.toml
core/src/: append.rs  compression.rs  extraction.rs  internals.rs  lib.rs  utils.rs
